# docs/openapi.yaml
@@ -3972,6 +3972,10 @@ components:
               type: string
               minLength: 1
               maxLength: 200
+            attempt:
+              type: integer
+              exclusiveMinimum: 0
+              maximum: 9007199254740991
             eventId:
               type: string
               minLength: 1
@@ -4010,6 +4014,7 @@ components:
               const: clean
           required:
             - jobId
+            - attempt
             - eventId
             - versionId
             - assetId
@@ -4023,6 +4028,10 @@ components:
               type: string
               minLength: 1
               maxLength: 200
+            attempt:
+              type: integer
+              exclusiveMinimum: 0
+              maximum: 9007199254740991
             eventId:
               type: string
               minLength: 1
@@ -4061,6 +4070,7 @@ components:
               const: infected
           required:
             - jobId
+            - attempt
             - eventId
             - versionId
             - assetId
@@ -4074,6 +4084,10 @@ components:
               type: string
               minLength: 1
               maxLength: 200
+            attempt:
+              type: integer
+              exclusiveMinimum: 0
+              maximum: 9007199254740991
             eventId:
               type: string
               minLength: 1
@@ -4116,6 +4130,7 @@ components:
               maxLength: 500
           required:
             - jobId
+            - attempt
             - eventId
             - versionId
             - assetId
